--- a/src/styles/blocks/class.scss
+++ b/src/styles/blocks/class.scss
@@ -8,8 +8,7 @@
 
   @include content-padding-inline;
 
-
-  &__wrapper{
+  &__wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -19,18 +18,17 @@
     max-width: 570px;
 
     border-radius: 8px;
-    box-shadow: 2px 0 0 #1A5A4C40;
-;
+    box-shadow: 0 2px 0 #1a5a4c40;
     background: #fff;
     position: absolute;
-    transform: translateY(-10%);
+    transform: translateY(-5%);
     z-index: 10;
 
-    @include on-tablet{
-      width: 570px;
+    @include on-tablet {
+      width: 470px;
       height: 204px;
-      padding: 20px  40px;
       justify-content: center;
+      padding: 20px 50px;
     }
   }
 
@@ -43,7 +41,7 @@
     gap: 40px;
     margin: 0;
 
-    @include on-tablet{
+    @include on-tablet {
       justify-content: space-between;
     }
 
@@ -68,7 +66,7 @@
       font-weight: 700;
       line-height: 24px;
       text-align: left;
-      color:$green-color;
+      color: $green-color;
 
       @include on-tablet {
         font-size: 14px;
