--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -35,7 +35,7 @@
       grid-template-columns: repeat(6, 1fr);
     }
 
-    @include on-desktop{
+    @include on-desktop {
       grid-template-columns: repeat(12, 1fr);
     }
   }
@@ -55,7 +55,7 @@
       grid-column: span 6;
     }
 
-    @include on-desktop{
+    @include on-desktop {
       grid-column: 1/7;
     }
   }
@@ -83,7 +83,6 @@
     gap: 10px;
     padding: 6px;
     margin: 0;
-
 
     &-type {
       font-family: $font-primary;
@@ -126,7 +125,7 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: #0F0E08;
+    color: #0f0e08;
     padding: 2px;
     margin: 0;
 
@@ -135,7 +134,6 @@
       line-height: 36px;
     }
   }
-
 
   &__description {
     font-family: $font-primary;
@@ -149,12 +147,12 @@
     margin: 0;
   }
 
-   @include on-tablet {
-      font-size: 16px;
-      line-height: 24px;
-    }
+  @include on-tablet {
+    font-size: 16px;
+    line-height: 24px;
+  }
 
-    h3.events__name {
+  h3.events__name {
     font-family: $font-secondary;
     font-size: 28px;
     font-weight: 400;
@@ -162,7 +160,7 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: #0F0E08;
+    color: #0f0e08;
     padding: 2px;
     margin: 0;
 
@@ -173,13 +171,13 @@
   }
 }
 
-.events__image events__image--sunset{
-position: relative;
+.events__image events__image--sunset {
+  position: relative;
   width: 100%;
   padding: 0;
   margin-top: 60px;
 
-  @include on-tablet{
+  @include on-tablet {
     margin-top: 112px;
   }
 }
