--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,15 +3,18 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 300px;
   overflow: hidden;
   margin-bottom: 70px;
 
   @include on-tablet {
     margin-bottom: 80px;
+    height: 384px;
   }
 
   @include on-desktop {
     margin-bottom: 200px;
+    height: 655px;
   }
 
   &__content {
@@ -20,25 +23,43 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-
-    @include content-padding-inline;
+    gap: 20px;
+    padding-left: 20px;
 
     @include on-tablet {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      gap: 20px;
+      flex-direction: row-reverse;
+      padding-left: 34px;
     }
 
     @include on-desktop {
-      grid-template-columns: repeat(12, 1fr);
-      gap: 30px;
+      padding-left: 55px;
     }
   }
 
   &__menu-icon {
+    display: block;
+    position: absolute;
+    top: 20px;
+    left: 20px;
     width: 24px;
     height: 24px;
-    z-index: 10;
+    transition: transform 0.3s;
+
+    @include hover(transform, scale(1.2));
+
+    @include on-tablet {
+      top: 40px;
+      left: 80px;
+      height: 32px;
+      width: 32px;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
   }
 
   &__logo {
@@ -48,119 +69,111 @@
     line-height: 30px;
     text-align: center;
     color: #0f0e08;
-    margin-top: 7px;
-    padding: 2px;
-    z-index: 5;
-    display: block;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    margin-top: 9px;
 
     @include on-tablet {
       font-size: 36px;
       line-height: 36px;
       margin-top: 14px;
-      grid-column: 4 / 5;
-    }
-
-    @include on-desktop {
-      grid-column: 7 / 8;
+      display: flex;
+      justify-content: start;
     }
   }
 
   &__img {
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    flex: 1;
     width: 100%;
-    height: 100%;
-   background: url('../images/bg-header.svg') center/cover no-repeat;
-
+    height: 300px;
+    margin-bottom: 20px;
+    background: url('../images/bg-header.svg') center/cover no-repeat;
 
     @include on-tablet {
       width: 50%;
+      height: 384px;
     }
 
     @include on-desktop {
-      width: 55%;
       height: 655px;
     }
   }
+}
 
-  &__text {
-    display: flex;
-    flex-direction: column;
+.intro {
+  display: flex;
+  position: relative;
+  flex: 1;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 20px;
+  width: 100%;
+  padding: 20px;
+
+  @include on-tablet {
+    text-align: left;
+    gap: 30px;
+    width: 50%;
+    margin-top: 60px;
+  }
+
+  &__title {
+    margin-bottom: 30px;
     width: 100%;
+    font-family: $font-secondary;
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 45px;
+    text-align: center;
 
     @include on-tablet {
-      grid-column: 1 / span 3;
+      font-size: 54px;
+      line-height: 64.8px;
       text-align: left;
     }
 
     @include on-desktop {
-      grid-column: 1 / span 5;
+      font-size: 72px;
+      line-height: 86.4px;
+      margin-bottom: 80px;
     }
-
-    &-title {
-  margin: 0;
-  font-family: $font-secondary;
-  font-size: 45px;
-  font-weight: 700;
-  line-height: 45px;
-  text-align: center;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
-
-  @include on-tablet {
-    font-size: 54px;
-    margin-bottom: 38px;
   }
-
-  @include on-desktop {
-    max-width: 470px;
-    margin-bottom: 89px;
-  }
-}
-  }
-
 
   &__cta-button {
-    display:flex;
-    margin: 10px;
-    position: relative;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    background-color: transparent;
-    cursor: pointer;
-    border: 1px solid $green-color;
-    transition: background-color 0.3s, transform 0.3s;
-
-
-    @include on-tablet{
-      width:270px;
-  }
-
-      & > a {
     display: flex;
     align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    color: #000;
-    font-family: $font-primary;
-font-size: 16px;
-font-weight: 500;
-line-height: 16px;
-text-decoration-skip-ink: none;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    border: 2px solid $green-color;
+    background-color: white;
     text-transform: uppercase;
-    width: 100%;
-  }
+    text-decoration: none;
+    color: $green-color;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    width: fit-content;
 
     &:hover {
       background-color: $green-color;
+      color: white;
       transform: scale(1.05);
-
-       a {
-      color: #fff;
     }
+
+    &__text {
+      margin: 18px 80px;
+      font-family: $font-primary;
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 16px;
+      color: #0f0e08;
+
+      @include on-tablet {
+        margin: 27px 60px;
+      }
     }
 
     &__icon {
@@ -171,165 +184,40 @@ text-decoration-skip-ink: none;
         width: 70px;
         height: 70px;
       }
-
-    &__icon:target {
-      filter: invert(1);
     }
   }
- }
-}
 
+  &__footnote {
+    display: none;
+    transform: translate(0);
+    flex-wrap: wrap;
+    margin-top: -15%;
+    gap: 20px;
 
-.header__footnote-section {
-  display: none;
-  transform: translate(0);
-
-  @include on-desktop {
-    display: flex;
-    justify-content: space-between;
-
-    &__footnote-line {
-      width: 7px;
-      height: 70px;
-      background-color: $green-color(--green-color);
-    }
-
-    &__footnote-name {
-      font-family: $font-secondary;
-      font-size: 14px;
-      line-height: 14px;
-      transform: rotate(90deg);
-      transform-origin: left top;
-      white-space: nowrap;
-    }
-  }
-}
-
-.header__menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: $green-color;
-  pointer-events: none;
-  z-index: 100;
-  visibility: hidden;
-  opacity: 0;
-  transition:
-    visibility 0.3s ease,
-    opacity 0.3s ease;
-
-  &:target {
-    visibility: visible;
-    opacity: 1;
-    pointer-events: auto;
-    height: 399px;
-  }
-
-  @include on-tablet {
-    height: 225px;
-  }
-
-  @include on-desktop {
-    height: 233px;
-  }
-
-  &-icon-close {
-    position: absolute;
-    top: 16px;
-    left: 16px;
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
-
-    img {
+    @include on-desktop {
+      display: flex;
+      flex-direction: column;
       width: 100%;
-      height: 100%;
-      display: block;
+      justify-content: flex-start;
+      align-items: start;
+
+      &-line {
+        width: 70px;
+        height: 1px;
+        background-color: $green-color;
+        transform: rotate(90deg);
+        transform-origin: left top;
+        margin-top: 20px;
+      }
+
+      &-name {
+        font-family: $font-primary;
+        font-size: 14px;
+        line-height: 14px;
+        transform: rotate(90deg);
+        transform-origin: left top;
+        white-space: nowrap;
+      }
     }
-  }
-
-  &-wrapper {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    color: #fff;
-
-    @include on-tablet {
-      flex-direction: row;
-      align-items: flex-start;
-      justify-content: center;
-    }
-  }
-}
-
-.nav {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-
-  @include on-tablet {
-    flex-direction: row;
-  }
-
-  &__columns {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__list {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    padding: 0;
-
-    @include on-tablet {
-      flex-direction: row;
-      gap: 32px;
-    }
-  }
-
-
- &__link {
-  font-family: $font-primary;
-  font-size: 16px;
-  font-weight: 500;
-  text-decoration: none;
-  color: #fff;
-  position: relative;
-  transition: color 0.3s ease;
-
-  &::before {
-    content: '';
-    position: absolute;
-    bottom: -4px;
-    left: 0;
-    width: 0;
-    height: 2px;
-    background-color: #c2d6f8;
-    transition: width 0.3s ease;
-  }
-
-  &:hover {
-    color: #c2d6f8;
-
-    &::before {
-      width: 100%;
-    }
-  }
-}
-}
-
-.separator {
-  background-color: #fff;
-  width: 100%;
-  height: 1px;
-  margin: 16px 0;
-
-  @include on-tablet {
-    width: 1px;
-    height: 145px;
-    margin: 0 16px;
   }
 }
