--- a/src/styles/entire.scss
+++ b/src/styles/entire.scss
@@ -2,12 +2,12 @@
 @import 'utils/mixins';
 @import 'utils/vars';
 @import 'fonts';
-@import 'blocks/class';
-@import 'blocks/contacts';
-@import 'blocks/events';
-@import 'blocks/footer';
-@import 'blocks/gallery';
 @import 'blocks/header';
-@import 'blocks/main';
 @import 'blocks/menu';
+@import 'blocks/intro';
+@import 'blocks/main';
+@import 'blocks/events';
+@import 'blocks/class';
+@import 'blocks/gallery';
 @import 'blocks/subscribe';
+@import 'blocks/footer';
