--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,3 +1,131 @@
-.subscribe{
+.subscription {
   display: flex;
+  position: relative;
+  width: 100%;
+  height: 386px;
+  justify-content: center;
+  align-items: center;
+  background: url('../images/bg-subscribe.svg') center/cover no-repeat;
+
+  @include on-tablet {
+    height: 380px;
+  }
+
+  @include on-desktop {
+    height: 550px;
+  }
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 1;
+    max-width: 570px;
+    text-align: center;
+    padding: 20px;
+    gap: 20px;
+
+    @include on-tablet {
+      gap: 16px;
+    }
+  }
+
+  &__title-name {
+    font-family: $font-secondary;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.2;
+    color: #fff;
+    margin: 0;
+
+    @include on-tablet {
+      font-size: 48px;
+    }
+  }
+
+  &__text {
+    font-family: $font-primary;
+    font-size: 18px;
+    line-height: 1.5;
+    text-align: center;
+    color: #fff;
+    max-width: 500px;
+    margin: 0;
+  }
+
+  &__form {
+    display: flex;
+    position: relative;
+    flex-flow: row nowrap;
+    justify-content: center;
+    width: 100%;
+    box-sizing: border-box;
+
+    @include on-tablet {
+      gap: 16px;
+    }
+
+    @include on-desktop {
+      max-width: 570px;
+    }
+  }
+
+  &__input {
+    font-family: $font-secondary;
+    font-size: 14px;
+    line-height: 14px;
+    padding: 10px;
+    background-color: white;
+    color: #687480;
+    width: 100%;
+    max-width: 360px;
+    transition: all 0.3s ease;
+    box-sizing: border-box;
+
+    &::placeholder {
+      color: #687480;
+    }
+
+    &:focus {
+      border-color: orangered;
+      text-transform: uppercase;
+    }
+  }
+
+  &__button {
+    font-family: $font-secondary;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 14px;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    width: 50px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    background-color: #f14a27;
+    cursor: pointer;
+    transition: all 0.3s ease;
+
+    @include on-tablet {
+      width: 70px;
+      height: 70px;
+    }
+
+    &:hover {
+      background-color: orangered;
+      transform: scale(1.05);
+    }
+  }
+
+  &__icon {
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
