add task solution

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -16,6 +16,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    z-index: 1;
 
     @include onTablet {
       width: 50%;
