--- a/src/styles/blocks/museum.scss
+++ b/src/styles/blocks/museum.scss
@@ -72,6 +72,11 @@
         height: 50px;
         background-color: $main-subtitle;
         margin-top: 20px;
+        transition: margin-top 0.3s ease;
+      }
+
+      &:hover::before {
+        margin-top: 25px;
       }
 
     }
@@ -88,6 +93,8 @@
     cursor: pointer;
     padding: 0;
     margin: 20px 0;
+
+    @include hover(border, 3px solid $main-green-color);
 
     @include onTablet {
       width: 270px;
