--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -1,31 +1,30 @@
 .article {
   @include on-desktop {
     display: flex;
-    gap: 130px;
     align-items: center;
+    gap: 130px;
   }
 
-  &--full-width{
-    background-image: url(/src/images/article-bg.png);
+  &--full-width {
+    background-image: url(/src/images/sky-background.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 210px;
     margin-bottom: 84px;
 
-    @include on-tablet{
+    @include on-tablet {
       height: 390px;
       margin-inline: 34px;
       margin-bottom: 123px;
     }
 
-    @include on-desktop{
-      height:  550px;
+    @include on-desktop {
+      height: 550px;
       margin-bottom: 115px;
       margin-inline: 0;
     }
   }
-
 
   &__photo {
     width: 280px;
@@ -35,7 +34,7 @@
     margin-inline: auto;
 
     @include hover(transform, scale(1.05));
-    
+
     @include on-tablet {
       width: 700px;
       height: 520px;
@@ -63,12 +62,12 @@
       margin-top: 0;
     }
 
-    &--box{
+    &--box {
       padding-inline: 21px;
       margin-block: 0;
       gap: 20px;
 
-      @include on-tablet{
+      @include on-tablet {
         padding-inline: 0;
         gap: 180px;
       }
@@ -90,7 +89,7 @@
   }
 
   &__time {
-    color: $menu-color;
+    color: $menu-bg;
     font-weight: 700;
 
     @include on-tablet {
@@ -158,8 +157,8 @@
     position: relative;
     margin-inline: auto;
     box-sizing: border-box;
-    background-color: $page-color;
-    filter: drop-shadow(0 2 rgba(26, 90, 76, 0.25));
+    background-color: $main-white;
+    filter: drop-shadow(0 2 $article-box-shadow);
     padding-block: 20px;
     width: 280px;
     top: 153px;
