--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  color: rgba(15, 14, 8, 1);
   font-weight: 400;
   font-size: 14px;
   line-height: 150%;
@@ -8,7 +7,6 @@
     @include page-grid;
 
     padding-block: 32px;
-
 
     @include on-tablet {
       padding-top: 51px;
@@ -53,12 +51,12 @@
     grid-column: 1/2;
     margin-top: 40px;
 
-    @include on-tablet{
+    @include on-tablet {
       grid-column: 2/4;
       margin-top: 0;
     }
 
-    @include on-desktop{
+    @include on-desktop {
       grid-column: 3/5;
     }
   }
@@ -66,20 +64,20 @@
   &__contacts {
     position: relative;
     grid-column: 2/-1;
-    color: rgba(15, 14, 8, 1);
+    color: $main-dark;
     margin-top: 40px;
 
-    @include on-tablet{
+    @include on-tablet {
       grid-column: 4/6;
       margin-top: 0;
     }
 
-    @include on-desktop{
+    @include on-desktop {
       grid-column: 5/7;
     }
   }
 
-  &__contacts-title{
+  &__contacts-title {
     margin-bottom: 20px;
   }
 
@@ -115,7 +113,7 @@
       display: block;
       left: 0;
       width: 100%;
-      background-color: rgba(26, 90, 76, 0.5);
+      background-color: $menu-bg;
       height: 1px;
       top: -40px;
 
