--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,6 +1,5 @@
 .header {
-
-  &__background{
+  &__background {
     background-image: url(/src/images/header-background.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -11,13 +10,13 @@
     z-index: -1;
     top: 0;
 
-    @include on-tablet{
+    @include on-tablet {
       right: 0;
       height: 384px;
       width: 48%;
     }
 
-    @include on-desktop{
+    @include on-desktop {
       width: 55%;
       max-width: 1000px;
       height: 655px;
@@ -70,7 +69,7 @@
 
   &__button {
     grid-column: 1/-1;
-    border: 1px solid $menu-color;
+    border: 1px solid $menu-bg;
     display: flex;
     width: 280px;
     height: 50px;
@@ -95,37 +94,37 @@
     }
   }
 
-  &__tickets{
+  &__tickets {
     text-align: center;
     padding-block: 14px;
     width: 230px;
     text-transform: uppercase;
     color: $main-dark;
 
-    @include on-tablet{
+    @include on-tablet {
       width: 200px;
       padding-block: 24px;
     }
 
     &:hover {
-      color: $menu-color;
+      color: $menu-bg;
     }
   }
 
   &__arrow {
     width: 50px;
     height: 50px;
-    background-color: $menu-color;
+    background-color: $menu-bg;
 
-    @include on-tablet{
+    @include on-tablet {
       width: 70px;
       height: 70px;
     }
   }
 
-  &__events{
+  &__events {
     display: none;
-    color: rgba(104, 116, 128, 1);
+    color: $article-type;
     font-size: 14px;
     font-weight: 700;
     line-height: 14px;
@@ -134,16 +133,17 @@
     position: absolute;
     top: 522px;
     left: 0;
-    writing-mode:sideways-lr;
+    writing-mode: sideways-lr;
+    text-decoration: none;
 
-    @include on-desktop{
+    @include on-desktop {
       display: flex;
     }
   }
 
-  &__events-line{
+  &__events-line {
     width: 1px;
     height: 70px;
-    background-color: rgba(26, 90, 76, 1);
+    background-color: $menu-bg;
   }
 }
