--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -18,12 +18,13 @@
 
   &--close {
     background-image: url(/src/images/icon-close.svg);
+    padding-top: 20px;
   }
 
-  &--arrow{
+  &--arrow {
     padding: 13px;
 
-    @include on-tablet{
+    @include on-tablet {
       padding: 23px;
     }
   }
