--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,5 +1,5 @@
 .menu {
-  background-color: $menu-color;
+  background-color: $menu-bg;
 
   &__content {
     padding-block: 27px;
@@ -29,7 +29,7 @@
       content: '';
       position: absolute;
       height: 1px;
-      background-color: $page-color;
+      background-color: $main-white;
       bottom: -24px;
       width: 100%;
 
@@ -46,7 +46,7 @@
         content: '';
         position: absolute;
         width: 1px;
-        background-color: $page-color;
+        background-color: $main-white;
         right: -38px;
         height: 100%;
         top: 0;
