--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -3,8 +3,8 @@
 }
 
 .page {
-  background-color: $page-color;
-  color: rgba(78, 78, 78, 1);
+  background-color: $main-white;
+  color: $main-dark;
   font-size: 16px;
   line-height: 24px;
   font-weight: 500;
@@ -43,7 +43,7 @@
   &:has(.page__menu:target) .section__title,
   &:has(.page__menu:target) .header__title,
   &:has(.page__menu:target) .header__button,
-  &:has(.page__menu:target) .header__events{
+  &:has(.page__menu:target) .header__events {
     filter: opacity(0.2);
   }
 
