--- a/src/styles/schedule.scss
+++ b/src/styles/schedule.scss
@@ -1,12 +1,12 @@
-.schedule{
-  color: $page-color;
+.schedule {
+  color: $main-white;
   font-weight: 400;
 
-  &--footer{
-    color: rgba(15, 14, 8, 1);
+  &--footer {
+    color: $main-dark;
   }
 
-  &__content{
+  &__content {
     margin-top: 20px;
     display: flex;
     gap: 16px;
@@ -21,8 +21,8 @@
       gap: 30px;
     }
 
-    &--footer{
-      @include on-tablet{
+    &--footer {
+      @include on-tablet {
         flex-direction: column;
       }
     }
@@ -33,17 +33,18 @@
     list-style: none;
   }
 
-  &__list-item{
-    @include bold-text;
-
+  &__list-item {
     font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
+    color: $main-white;
 
-    &--footer{
-      color: rgba(15, 14, 8, 1);
+    &--footer {
+      color: $main-dark;
     }
   }
 
-  &__list-day{
+  &__list-day {
     font-weight: 400;
   }
 
@@ -57,10 +58,13 @@
     }
 
     &-title {
-      @include bold-text;
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 21px;
+      color: $main-white;
     }
 
-    &--footer{
+    &--footer {
       width: 100%;
     }
   }
