--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -1,5 +1,5 @@
-.subscription{
-  background-image: url(/src/images/subscription-bg.png);
+.subscription {
+  background-image: url(/src/images/scene-in-museum.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -14,7 +14,7 @@
     height: 550px;
   }
 
-  &__content{
+  &__content {
     padding-block: 88px;
 
     @include on-tablet {
@@ -27,7 +27,7 @@
   }
 
   &__description {
-    color: rgba(255, 255, 255, 1);
+    color: $main-white;
     font-size: 18px;
     line-height: 150%;
     text-align: center;
@@ -64,7 +64,7 @@
     height: 50px;
     padding-block: 18px;
     padding-left: 24px;
-    color: rgba(104, 116, 128, 1);
+    color: $article-type;
     font-size: 14px;
     line-height: 14px;
     font-family: Montserat, serif;
@@ -85,21 +85,20 @@
     &:-webkit-autofill:hover,
     &:-webkit-autofill:focus {
       -webkit-text-fill-color: $article-type;
-      -webkit-box-shadow: 0 0 0 1000px rgba(104, 116, 128, 1) inset;
+      -webkit-box-shadow: 0 0 0 1000px $article-type inset;
       transition: background-color 5000s ease-in-out 0s;
     }
   }
 
-  &__button{
+  &__button {
     width: 50px;
     height: 50px;
     background-color: $main-red;
     cursor: pointer;
 
     @include centered-flex;
-
     @include hover(transform, scale(1.1));
-    
+
     @include on-tablet {
       height: 70px;
       width: 70px;
