--- a/src/styles/swiper.scss
+++ b/src/styles/swiper.scss
@@ -42,7 +42,7 @@
       height: 543px;
     }
 
-    &--positioned-left{
+    &--positioned-left {
       object-position: left;
     }
   }
@@ -52,7 +52,7 @@
 
     &-bullet {
       margin-right: 22px !important;
-      background-color: $menu-color !important;
+      background-color: $menu-bg !important;
     }
   }
 
