--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,6 +1,9 @@
-$page-color: rgba(255, 255, 255, 1);
+$tablet-width: 768px;
+$desktop-width: 1280px;
+$main-white: rgba(255, 255, 255, 1);
 $article-type: rgba(104, 116, 128, 1);
-$menu-color: rgba(26, 90, 76, 1);
+$menu-bg: rgba(26, 90, 76, 1);
 $article-description: rgba(78, 78, 78, 1);
+$article-box-shadow: rgba(26, 90, 76, 0.25);
 $main-dark: rgba(15, 14, 8, 1);
 $main-red: rgba(241, 74, 39, 1);
