--- a/src/styles/title.scss
+++ b/src/styles/title.scss
@@ -1,4 +1,4 @@
-.title{
+.title {
   font-weight: 700;
   line-height: 100%;
   text-transform: uppercase;
@@ -6,26 +6,26 @@
   color: $main-dark;
   font-family: Montserrat, serif;
 
-  @include on-tablet{
+  @include on-tablet {
     text-align: left;
   }
 
-  &--section{
+  &--section {
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 40px;
 
-    @include on-tablet{
-      margin-bottom: 48px
+    @include on-tablet {
+      margin-bottom: 48px;
     }
 
-    @include on-desktop{
-      margin-bottom: 56px
+    @include on-desktop {
+      margin-bottom: 56px;
     }
   }
 
   &--white {
-    color: $page-color;
+    color: $main-white;
     margin-bottom: 20px;
     text-align: center;
 
