add task solution

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,8 @@
 .header {
   //display: none !important;
   position: relative;
+  max-width: 1900px;
+  margin-left: auto;
 
 
   @include onTablet {
@@ -45,6 +47,11 @@
 
     @include onTablet {
       width: 220px;
+    }
+
+    @include onDesktop {
+      width: 170px;
+      left: 39%;
     }
   }
 
