--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -12,7 +12,8 @@
 
   &__block {
     width: 100%;
-    @include sectionMaxWidth;
+    max-width: 1900px;
+    margin-left: auto;
 
     @include onTablet {
       display: flex;
